2013-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_gpval_variables):  Missing GPVAL_* entry
	for R_AXIS.max.

2013-08-12  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/Makefile.maint (version, patchlevel, last_change)
	(makefile.all, version.c): Prepare for possible use out-of-tree.

	* src/Makefile.am (timestamp.h): New rule for timestamp.h that
	cooperates with automake that should work for non-GNU make and
	out-of-tree builds.
	(BUILT_SOURCES): Add timestamp.h to be built before anything else.

	* src/Makefile.maint: timestamp.h rule removed again.

	* src/.cvsignore: Ignore timestamp.h and *.o files.

	* src/version.c [DEVELOPMENT_VERSION]: Include new timestamp.h
	instead of using fixed time stamp.

	* src/Makefile.maint (version.c): Remove timestamp update
	mechanism.
	(timestamp.h): Create new, separate header file that only holds
	the current timestamp.

2013-08-09  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* configure.in:  Change configuration option from --with-wx-config=PATH
	to --with-wx=DIR.  The is more consistent both with other gnuplot
	configuration options and with the upstream documentation for wx.

2013-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/command.c src/command.h src/save.c src/set.c
	src/show.c src/tables.c src/unset.c demo/macros.dem:
	Remove configuration option for command line macros.
	It's cheap. People use it. It doesn't conflict with anything else.
	There seems little reason to carry along extra code to disable it.

2013-08-09  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c src/misc.c src/save.c src/term_api.h src/term.c:
	New arrow style option "fixed" disables the re-sizing of arrow heads
	for short arrows.

2013-08-08  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c (draw_clip_polygon):  Sometimes the clipping status of
	the current point and the line segment it is supposedly the end of do